# ManagementSystem

./: CMakeLists.txt  main.c
Controller/: Controller.c  Controller.h
Mapper/: Mapper.c  Mapper.h
Service/: Service.c  Service.h
Test/: test.c  testControllerCRUD.c  testControllerCourse.c  testControllerPaper.c  testControllerPrize.c  testControllerProject.c  testControllerScore.c  testControllerStudent.c  testInputStr.c  testList.c  testLogin.c  testMapper.c
Utils/: List.c  List.h  Logger.c  Logger.h  Pairif.c  Pairif.h  cmp4List.c  cmp4List.h  init.c  showWelcomeScreen.c  utils.c  utils.h
file/: file.c  file.h
include/: inc.h
poco/: Course.c  Course.h  Paper.c  Paper.h  Prize.c  Prize.h  Project.c  Project.h  Score.c  Score.h  Student.c  Student.h
